--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -13,6 +13,13 @@ a {
   font-weight: bold;
 }
 
+.container-about {
+  margin-top: 100px;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-bottom: 100px;
+}
+
 div.container-center {
   //margin: 100px 100px 0px 100px;
   display: block;
@@ -44,6 +51,21 @@ div.container-center {
   background-color: rgb(70, 70, 70);
 }
 
+.row {
+  display: flex;
+}
+
+.row img {
+  width: 100%;
+  height: 100%;
+  align-self: center;
+}
+
+.content {
+  margin-left: 30px;
+}
+
 .footer {
   text-align: center;
+  margin-top: auto;
 }
